samples/_failures_safe/1761218332_a83137_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3bc645dc.c: In function ‘main’:
./samples/SAFE/__tmp_3bc645dc.c:157:12: error: missing terminating " character
  157 |     printf("Disconnected graph
      |            ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_3bc645dc.c:157:5: error: expected expression at end of input
  157 |     printf("Disconnected graph
      |     ^~~~~~
./samples/SAFE/__tmp_3bc645dc.c:157:5: error: expected declaration or statement at end of input
